--- a/pom.xml
+++ b/pom.xml
@@ -72,12 +72,12 @@
       <version>1.9.3</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.struts/struts2-tiles-plugin -->
-    <dependency>
+    <!--<dependency>
       <groupId>org.apache.struts</groupId>
       <artifactId>struts2-tiles-plugin</artifactId>
       <version>2.5.16</version>
     </dependency>
-
+-->
       <dependency>
       <groupId>org.apache.tiles</groupId>
       <artifactId>tiles-extras</artifactId>
