--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
       <version>3.0.8</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>3.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
