История сессии перенесена в контекст

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <listener-class>org.ListenerHttpSessionAttributes</listener-class>
     </listener>
 
+    <listener>
+        <listener-class>org.ListenerHttpContextSessionAttributes</listener-class>
+    </listener>
+
     <context-param>
         <param-name> org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG </param-name>
         <param-value>/WEB-INF/tiles.xml</param-value>
