--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,14 @@
       <version>3.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.5</version>
+    </dependency>
+
+
 
   </dependencies>
 
