--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,17 +38,17 @@
         <listener-class>org.apache.tiles.extras.complete.CompleteAutoloadTilesListener</listener-class>
     </listener>
 
-    <listener>
-        <listener-class>org.ListenerAttributes</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>org.ListenerAttributes</listener-class>-->
+    <!--</listener>-->
 
-    <listener>
-        <listener-class>org.ListenerHttpSessionAttributes</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>org.ListenerHttpSessionAttributes</listener-class>-->
+    <!--</listener>-->
 
-    <listener>
-        <listener-class>org.ListenerHttpContextSessionAttributes</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>org.ListenerHttpContextSessionAttributes</listener-class>-->
+    <!--</listener>-->
 
     <context-param>
         <param-name> org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG </param-name>
