--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,5 +55,9 @@
         <param-value>/WEB-INF/tiles.xml</param-value>
     </context-param>
 
+    <resource-env-ref>
+        <resource-env-ref-name>jdbc/db</resource-env-ref-name>
+        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
+    </resource-env-ref>
 
 </web-app>
