--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,14 @@
       <version>2.8.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.196</version>
+    </dependency>
+
+
 
   </dependencies>
 
