--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,10 @@
     <servlet>
         <servlet-name>App</servlet-name>
         <servlet-class>org.Calc</servlet-class>
+        <init-param>
+            <param-name>DBName</param-name>
+            <param-value>H2/db</param-value>
+        </init-param>
     </servlet>
 
     <servlet-mapping>
@@ -49,14 +53,6 @@
     <!--<listener>-->
         <!--<listener-class>org.ListenerHttpContextSessionAttributes</listener-class>-->
     <!--</listener>-->
-    <!--
-    <context-param>
-        <param-name></param-name>
-        <param-value></param-value>
-    </context-param>
--->
-
-
     <context-param>
         <param-name> org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG </param-name>
         <param-value>/WEB-INF/tiles.xml</param-value>
@@ -64,6 +60,11 @@
 
     <resource-env-ref>
         <resource-env-ref-name>jdbc/db</resource-env-ref-name>
+        <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
+    </resource-env-ref>
+
+    <resource-env-ref>
+        <resource-env-ref-name>H2/db</resource-env-ref-name>
         <resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
     </resource-env-ref>
 
